WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169938
RTCPeerConnection is crashing if no backend is created
https://bugs.webkit.org/show_bug.cgi?id=169938
Summary
RTCPeerConnection is crashing if no backend is created
youenn fablet
Reported
2017-03-21 17:36:56 PDT
RTCPeerConnection is crashing if no backend is created.
Attachments
Patch
(2.18 KB, patch)
2017-03-21 17:42 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-03-21 17:42:59 PDT
Created
attachment 305053
[details]
Patch
youenn fablet
Comment 2
2017-03-21 17:43:37 PDT
Might be related to
rdar://30796880
Geoffrey Garen
Comment 3
2017-03-21 18:48:32 PDT
Comment on
attachment 305053
[details]
Patch I see a lot of methods that use m_backend and don't check for RTCSignalingState::Closed. How do we know they're OK?
youenn fablet
Comment 4
2017-03-21 20:38:18 PDT
(In reply to Geoffrey Garen from
comment #3
)
> Comment on
attachment 305053
[details]
> Patch > > I see a lot of methods that use m_backend and don't check for > RTCSignalingState::Closed. How do we know they're OK?
Since RTCPeerConnection is a Once created,
youenn fablet
Comment 5
2017-03-21 20:42:33 PDT
(In reply to youenn fablet from
comment #4
)
> (In reply to Geoffrey Garen from
comment #3
) > > Comment on
attachment 305053
[details]
> > Patch > > > > I see a lot of methods that use m_backend and don't check for > > RTCSignalingState::Closed. How do we know they're OK? > > Since RTCPeerConnection is a > Once created,
Since RTCPeerConnection is a JS built-in, once the C++ wrapper is created, initializeWith will be called and will return an exception. But the C++ object remains an active DOM object that remains to be stopped. Setting the state to closed allows RTCPeerConnection::close to be a no-op. But really, we should solve the real issue, which is that RTCPeerConnection is exposed while isLibWebRTCAvailable returns false. Once done, m_backend should be made a uniqueref.
WebKit Commit Bot
Comment 6
2017-03-22 11:00:25 PDT
Comment on
attachment 305053
[details]
Patch Clearing flags on attachment: 305053 Committed
r214262
: <
http://trac.webkit.org/changeset/214262
>
WebKit Commit Bot
Comment 7
2017-03-22 11:00:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug