RTCPeerConnection is crashing if no backend is created https://bugs.webkit.org/show_bug.cgi?id=169938

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-22
Reviewed by Geoffrey Garen.

RTCPeerConnection should not be visible if it is not able to create a backend.
In case when this happens anyway, it should be able to be stopped and destroyed without crashing.
To do so, we need to set its state to closed.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::RTCPeerConnection):
(WebCore::RTCPeerConnection::close): Cosmetic change, just in case stop becomes reentrant at some point.

Canonical link: https://commits.webkit.org/186891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214262 268f45cc-cd09-0410-ab3c-d52691b4dbfc